Message change for

--- a/i18n/tr.i18n.json
+++ b/i18n/tr.i18n.json
@@ -18,7 +18,7 @@
     "activity-unjoined": "unjoined %s",
     "add": "Ekle",
     "add-attachment": "Add an attachment",
-    "add-board": "Yeni bir pano ekle",
+    "add-board": "Yeni bir pano ekle (Sadece yoneticiler)",
     "add-card": "Add a card",
     "add-cover": "Add Cover",
     "add-label": "Add the label",
