--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -18,7 +18,7 @@
     "activity-unjoined": "unjoined %s",
     "add": "Add",
     "add-attachment": "Add an attachment",
-    "add-board": "Add a new board",
+    "add-board": "Add a new board. (Only admins)",
     "add-card": "Add a card",
     "add-cover": "Add Cover",
     "add-label": "Add the label",
